syntax = "proto2";

package Practice;

message ParkingSpot
{
  optional int32 SpotNum = 1;
  enum VehicleType
  {
    CAR = 0;
    VAN = 1;
    TRUCK = 2;
    MOTO = 3;
    EMPTY = 4;
  }
}

message ParkingLot
{
  repeated ParkingSpot spots = 1;
}